fix filter icon too small

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ body .grid{
 .filter.setting{
 	background-color: #d6d7d8;
 	border-radius: 3px;
-	font-size: 6px;
+	font-size: 12px;
 	height: 36px;
 	line-height: 36px;
 	color: #626363;
